@@ -1,3 +1,9 @@
+Fri Apr 24 08:21:07 2015  NARUSE, Yui  <naruse@ruby-lang.org>
+
+	* win32/win32.c (rb_acrt_lowio_lock_fh): wrap _pioinfo(i)->lock.
+
+	* win32/win32.c (rb_acrt_lowio_unlock_fh): ditto.
+
 Fri Apr 24 06:47:19 2015  NARUSE, Yui  <naruse@ruby-lang.org>
 
 	* win32/win32.c (_filbuf): msvc14 doesn't have it, use _fgetc_nolock.
